<resources>
    <string name="app_name">Tracker</string>

    <string name="login">Login</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>

    <string name="empty_email">Invalid E-mail</string>
    <string name="empty_password">Invalid Password</string>
    <string name="internal_error">Internal Error</string>
    <string name="user_update_error">Couldn\'t update user data</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>

    <string name="stopping_tracking_error">Something went wrong while stopping tracking. Please, try again.</string>
    <string name="start_activity_error">Could not start activity</string>
    <string name="tracking_successfully_saved">Tracking successfully saved!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_duration">00:00:00</string>

    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="default_distance">0.00</string>
    <string name="distance">Distance</string>
    <string name="default_calories">0</string>
    <string name="calories">Calories</string>
    <string name="calories_unit">(kcal)</string>
    <string name="distance_unit">(km)</string>
    <string name="distance_unit_no_brackets">km</string>
    <string name="rhythm">Rhythm</string>
    <string name="default_rhythm">00:00</string>
    <string name="rhythm_unit">(min/km)</string>
    <string name="speed">Speed</string>
    <string name="default_speed">0.0</string>
    <string name="speed_unit">(km/h)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout_confirmation">Are you sure to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish_activity_confirmation">Do you really want to finish your activity?</string>
    <string name="tracker_activity">Tracker Activity</string>
    <string name="logout">Logout</string>
    <string name="total">TOTAL</string>
    <string name="token_not_found">Token not found</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="weight_in_kg">Weight in kg</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>

</resources>